# NonlinearNormalForm.jl

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
fpp-ptc-sandbox/code/: .z_resonance.f90.swp  1  C:\document\etienne_programs_new\programs_for_learning\suntao\results_rad.txt  CMakeCache.txt  CMakeLists.txt  Examples.jl  Makefile  R.txt  T.txt  a1.txt  cesr_3nux_ptc.lat  cmake_install.cmake  d.map  f1.txt  f2.txt  f_as.txt  f_ask.txt  fit_tune.txt  fm.mat  fodo.map  fort.7667812  fort.8  gofix.map  m.map  m0.txt  m1.map  m1c.txt  m_norf.map  main_matt_3nux.f90  main_matt_accel_als_quad_strobos_with_res.f90  main_matt_accel_als_quad_strobos_with_res_ac_new.f90  main_matt_accel_als_quad_strobos_with_res_x_y.f90  main_matt_nux_2nuy.f90  map_res.txt  normal_simple.f90  qd.map  qd1.map  qf.map  qf1.map  qfkick.map  (+37 more)
fpp-ptc-sandbox/code/cmake_files/: cmake.main_matt_3nux  cmake.main_matt_accel_als_quad_strobos_with_res  cmake.main_matt_accel_als_quad_strobos_with_res_ac_new  cmake.main_matt_accel_als_quad_strobos_with_res_x_y  cmake.main_matt_nux_2nuy  cmake.normal_simple  cmake.z_benggston  cmake.z_canonize_matt_fake_maps  cmake.z_coast_matt_fake_maps  cmake.z_cut  cmake.z_cut_sub  cmake.z_deriv  cmake.z_fixed_point_matt  cmake.z_matt  cmake.z_matt_fake_maps  cmake.z_mono  cmake.z_par  cmake.z_parT  cmake.z_poisson  cmake.z_pseudo_deriv  cmake.z_radiation_matt_fake_maps  cmake.z_resonance  cmake.z_shift  cmake.z_simple_operations  cmake.z_spin1  cmake.z_spin_res  cmake.z_sub_i  cmake.z_sub_j  cmake.z_track_da_tpsa  cmake.z_track_map_code  cmake.z_var  cmake.z_vf_Lie_sub
(+167 files in other folders)
